[Mac] Use a nonactivating panel for notifications so that mouse down doesn't activate Chrome.

Currently, pressing the mouse button over a notification brings Chrome
to the front, even though the tab which sent the notification won't be
shown unless it calls `window.focus()` from its onclick listener.

This CL switches notifications to use NSPanel, which can receive mouse
events without activating the application.

Notifications were previously switched away from NSPanel to work around
crbug.com/459306. I tried fairly hard to repro that issue with this CL,
and couldn't. If it comes back, I feel okay about reverting this change
or taking another crack at its root cause.

BUG=653868

Review-Url: https://codereview.chromium.org/2393323005
Cr-Commit-Position: refs/heads/master@{#424505}