ui/message_center/cocoa/popup_controller.mm
@@ -32,7 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 // Window Subclass /////////////////////////////////////////////////////////////
 
-@interface MCPopupWindow : NSWindow {
+@interface MCPopupWindow : NSPanel {
   // The cumulative X and Y scrollingDeltas since the -scrollWheel: event began.
   NSPoint totalScrollDelta_;
 }
@@ -99,27 +99,23 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 - (id)initWithNotification:(const message_center::Notification*)notification
              messageCenter:(message_center::MessageCenter*)messageCenter
            popupCollection:(MCPopupCollection*)popupCollection {
-  base::scoped_nsobject<MCPopupWindow> window(
-      [[MCPopupWindow alloc] initWithContentRect:ui::kWindowSizeDeterminedLater
-                                       styleMask:NSBorderlessWindowMask
-                                         backing:NSBackingStoreBuffered
-                                           defer:NO]);
+  base::scoped_nsobject<MCPopupWindow> window([[MCPopupWindow alloc]
+      initWithContentRect:ui::kWindowSizeDeterminedLater
+                styleMask:NSNonactivatingPanelMask
+                  backing:NSBackingStoreBuffered
+                    defer:NO]);
   if ((self = [super initWithWindow:window])) {
     messageCenter_ = messageCenter;
     popupCollection_ = popupCollection;
     notificationController_.reset(
         [[MCNotificationController alloc] initWithNotification:notification
                                                  messageCenter:messageCenter_]);
-    isClosing_ = NO;
     bounds_ = [[notificationController_ view] frame];
 
-    [window setReleasedWhenClosed:NO];
-
-    [window setLevel:NSFloatingWindowLevel];
-    [window setExcludedFromWindowsMenu:YES];
+    [window setFloatingPanel:YES];
+    [window setBecomesKeyOnlyIfNeeded:YES];
     [window
         setCollectionBehavior:NSWindowCollectionBehaviorCanJoinAllSpaces |
-                              NSWindowCollectionBehaviorIgnoresCycle |
                               NSWindowCollectionBehaviorFullScreenAuxiliary];
 
     [window setHasShadow:YES];
